5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1674_1880.log
== TEST (2019-05-02 00:53:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (a == 3):
	print("marco")
elif (a == 4):
	print("abril")
elif (a == 5):
	print("maio")
elif (a == 6):
	print("junho")
elif (a == 7):
	print("julho")
elif (a == 8):
	print("agosto")
elif (a == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif (a == 3):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:56:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:56:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:56:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("insira o numero do mes: "))

if (x == 1):
	print("janeiro")	
elif (x == 2):
	print("fevereiro")
elif (x == 3):
	print("marco")
elif (x == 4):
	print("abril")
elif (x == 5):
	print("maio")
elif (x == 6):
	print("junho")
elif (x == 7):
	print("julho")
elif (x == 8):
	print("agosto")
elif (x == 9):
	print("setembro")
elif(x == 10):
	print("outubro")
elif(x == 11):
	print("novembro")
elif(x == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- EXECUTION TIME:
0.189994
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
